--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ],
   "builds": [
-    { "src": "index.html", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
+    }
   ],
-  "env": {
-    "VITE_TELEGRAM_BOT_URL": "https://telegram-bot-backend-8cpr.onrender.com"
-  }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.py"
+    }
+  ]
 }
